# my-ai-pen

./: .dockerignore  .gitignore  AGENTS.MD  CLAUDE.md  CONTEXT.md  README.md  vision.json
docs/: prd.md  (+23 more)
node3/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run-docker.ps1  run-python.ps1  strix_node.py
node3/strix/agents/: factory.py  prompt.py
node3/strix/agents/prompts/: system_prompt.jinja
node3/strix/config/: __init__.py  loader.py  models.py  settings.py
node3/strix/core/: __init__.py  agents.py  execution.py  hooks.py  inputs.py  paths.py  runner.py  sessions.py  task_shape.py
node3/strix/interface/: __init__.py  cli.py  main.py  utils.py
node3/strix/interface/assets/: tui_styles.tcss
node3/strix/platform/: __init__.py  node_protocol.py  node_runner.py
node3/strix/profiles/: __init__.py  dvwa_high.md  dvwa_medium.md  juice_shop.md  loader.py  vulhub_cve.md
node3/strix/report/: __init__.py  dedupe.py  sarif.py  state.py  usage.py  writer.py
node3/strix/runtime/: __init__.py  backends.py  caido_bootstrap.py  docker_client.py  session_manager.py
node3/strix/skills/: README.md  __init__.py
node3/strix/telemetry/: README.md  __init__.py  _common.py  logging.py  posthog.py  scarf.py
node3/strix/tools/: __init__.py  workflow.py
node3/strix/utils/: resource_paths.py
node5/: .env.example  README.md  pyproject.toml
node5/src/node5/: __init__.py  __main__.py  agent_graph.py  agent_runner.py  authz_matrix.py  browser_sandbox.py  cli.py  config.py  coverage.py  coverage_probes.py  feedback.py  high_value_probe.py  identity.py  knowledge.py  pack_loader.py  packages.py  run.py  sandbox_exec.py  stages.py  state.py  surface_model.py  surface_salvage.py  tools_act.py  workflow.py
node5/tests/: test_actor_jar.py  test_browser_session.py  test_coverage_feedback.py  test_coverage_probes.py  test_evidence_quality.py  test_high_value_campaign.py  test_identity_chain.py  test_knowledge.py  test_p1_chains.py  test_p2_high_value.py  test_packages.py  test_process_quality.py  test_report_merge.py  test_sandbox_exec.py  test_surface_model.py  test_track1_campaigns.py  test_vuln_catalog.py
platform/backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
platform/backend/app/: config.py  main.py  rabbitmq.py
platform/backend/scripts/: repair_finding_ledger.py
platform/backend/tests/: test_case_context.py  test_case_engagement.py  test_case_participants.py  test_elapsed_seconds.py  test_finding_dedupe.py
(+872 files in other folders)
