[project]
name = "node5"
version = "0.1.0"
description = "Research control arm: ADK graph workflow for structured pentest (CLI only)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "google-adk[extensions]>=2.0",
  "httpx>=0.27",
  "litellm>=1.84",
  "pydantic>=2.12",
  "python-dotenv>=1.0",
]

[project.scripts]
node5 = "node5.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/node5"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
