[project]
name = "pentest-platform-backend"
version = "0.1.0"
# Pin below 3.14: asyncpg wheels on Windows + uv-managed 3.14 have been incomplete
# (missing asyncpg.connection). Prefer 3.12 LTS via .python-version.
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
    "email-validator>=2.1.0",
    "openai>=1.59.0",
]
